Bugs in Samples updates

--- a/Bugs in Samples/Pages/Buttons.razor
+++ b/Bugs in Samples/Pages/Buttons.razor
@@ -68,17 +68,16 @@
                 REPRODUCED IN: Blazor and Web Components generated apps
             </h6>
         </div>
-    </div>
-    <div class="column-layout group_3">
         <div class="row-layout group_2">
             <p class="typography__subtitle-1 content">
-                Outline and flat buttons have white text in Blazor and WebComponents
+                When i change the text of a raised button
             </p>
             <h6 class="content">
                 NOT HAPPENING!!! (sample app issue?) 
             </h6>
         </div>
     </div>
+    <div class="column-layout group_3"></div>
 </div>
 
 @code {
