--- a/Bugs in Samples/Pages/Buttons.razor.css
+++ b/Bugs in Samples/Pages/Buttons.razor.css
@@ -63,7 +63,7 @@
     min-width: min-content;
 }
 .button::part(base) {
-    color: hsla(var(--ig-surface-500));
+    color: hsla(var(--ig-info-500));
 }
 .dropdown::part(base) {
     height: max-content;
