--- a/Bugs in Samples/Pages/Buttons.razor.css
+++ b/Bugs in Samples/Pages/Buttons.razor.css
@@ -16,7 +16,7 @@
     justify-content: center;
     align-items: center;
     align-content: center;
-    gap: 8px;
+    gap: 24px;
     position: relative;
     padding: 16px;
     min-width: 50px;
@@ -25,6 +25,37 @@
     flex-basis: 0;
 }
 .group_1 {
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: flex-start;
+    gap: 8px;
+    position: relative;
+    min-width: 50px;
+}
+.group_2 {
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: flex-start;
+    gap: 24px;
+    position: relative;
+    min-width: 50px;
+    min-height: 50px;
+}
+.card {
+    width: 320px;
+    height: max-content;
+    min-width: 320px;
+    flex-shrink: 0;
+}
+.group_3 {
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: flex-start;
+    position: relative;
+    min-width: 50px;
+    min-height: 50px;
+}
+.group_4 {
     background-color: hsla(var(--ig-secondary-800));
     justify-content: flex-start;
     align-items: stretch;
@@ -35,7 +66,7 @@
     min-width: 50px;
     min-height: 50px;
 }
-.group_2 {
+.group_5 {
     justify-content: flex-start;
     align-items: stretch;
     align-content: flex-start;
@@ -43,7 +74,7 @@
     position: relative;
     min-width: 50px;
 }
-.group_3 {
+.group_6 {
     background-color: hsla(var(--ig-warn-500));
     justify-content: flex-start;
     align-items: stretch;
@@ -62,14 +93,38 @@
 .dropdown {
     min-width: min-content;
 }
+.button_1 {
+    height: max-content;
+    min-width: min-content;
+}
 .button::part(base) {
-    color: hsla(var(--ig-success-500));
+    color: hsla(var(--ig-info-500));
 }
 .dropdown::part(base) {
     height: max-content;
+}
+.body-content {
+    min-width: 50px;
+    min-height: 50px;
+}
+.actions-content {
+    min-width: 50px;
+    min-height: 40px;
+}
+.avatar {
+    --background: none;
+}
+.icon {
+    font-size: 24px;
+    width: 24px;
+    height: 24px;
 }
 .content {
     color: hsla(var(--ig-surface-500));
     height: max-content;
     min-width: min-content;
+}
+.list {
+    height: max-content;
+    flex-shrink: 0;
 }
