--- a/Bugs in Samples/Pages/Buttons.razor.css
+++ b/Bugs in Samples/Pages/Buttons.razor.css
@@ -12,6 +12,14 @@
     display: flex;
 }
 .group {
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: flex-start;
+    position: relative;
+    min-width: 50px;
+    min-height: 50px;
+}
+.group_1 {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
@@ -24,7 +32,7 @@
     flex-grow: 1;
     flex-basis: 0;
 }
-.group_1 {
+.group_2 {
     justify-content: flex-start;
     align-items: stretch;
     align-content: flex-start;
@@ -32,7 +40,8 @@
     position: relative;
     min-width: 50px;
 }
-.group_2 {
+.group_3 {
+    flex-wrap: wrap;
     justify-content: flex-start;
     align-items: stretch;
     align-content: flex-start;
@@ -47,15 +56,16 @@
     min-width: 320px;
     flex-shrink: 0;
 }
-.group_3 {
+.group_4 {
     justify-content: flex-start;
     align-items: stretch;
     align-content: flex-start;
+    gap: 16px;
     position: relative;
     min-width: 50px;
     min-height: 50px;
 }
-.group_4 {
+.group_5 {
     background-color: hsla(var(--ig-secondary-800));
     justify-content: flex-start;
     align-items: stretch;
@@ -66,7 +76,7 @@
     min-width: 50px;
     min-height: 50px;
 }
-.group_5 {
+.group_6 {
     justify-content: flex-start;
     align-items: stretch;
     align-content: flex-start;
@@ -74,34 +84,8 @@
     position: relative;
     min-width: 50px;
 }
-.group_6 {
-    background-color: hsla(var(--ig-warn-500));
-    justify-content: flex-start;
-    align-items: stretch;
-    align-content: flex-start;
-    gap: 8px;
-    position: relative;
-    padding: 24px;
-    min-width: 50px;
-    min-height: 50px;
-}
-.button {
-    height: max-content;
-    min-width: min-content;
-    flex-shrink: 0;
-}
-.dropdown {
-    min-width: min-content;
-}
-.button_1 {
-    height: max-content;
-    min-width: min-content;
-}
-.button::part(base) {
-    color: hsla(var(--ig-info-500));
-}
-.dropdown::part(base) {
-    height: max-content;
+.default-dialog {
+    display: none;
 }
 .body-content {
     min-width: 50px;
@@ -110,6 +94,10 @@
 .actions-content {
     min-width: 50px;
     min-height: 40px;
+}
+.text {
+    height: max-content;
+    min-width: min-content;
 }
 .avatar {
     --background: none;
@@ -123,6 +111,30 @@
     color: hsla(var(--ig-surface-500));
     height: max-content;
     min-width: min-content;
+}
+.text_1 {
+    color: hsla(var(--ig-surface-500));
+    width: 811px;
+    height: max-content;
+    min-width: min-content;
+}
+.button {
+    height: max-content;
+    min-width: min-content;
+    flex-shrink: 0;
+}
+.button_1 {
+    height: max-content;
+    min-width: min-content;
+}
+.dropdown {
+    min-width: min-content;
+}
+.button::part(base) {
+    color: hsla(var(--ig-info-500));
+}
+.dropdown::part(base) {
+    height: max-content;
 }
 .list {
     height: max-content;
