--- a/Bugs in Samples/Pages/CardActions.razor.css
+++ b/Bugs in Samples/Pages/CardActions.razor.css
@@ -6,33 +6,32 @@
     justify-content: flex-start;
     align-items: stretch;
     align-content: flex-start;
-    overflow: hidden;
+    overflow: auto;
     height: 100%;
 }
 .row-layout {
     display: flex;
 }
-.group {
+.cards {
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: stretch;
     align-content: flex-start;
     gap: 16px;
-    overflow: auto;
     position: relative;
     padding: 24px;
     min-width: 50px;
     min-height: 50px;
     flex-grow: 1;
-    flex-basis: 0;
+    flex-shrink: 0;
 }
 .card {
+    width: 240px;
     height: max-content;
     min-width: 240px;
-    flex-grow: 1;
-    flex-basis: 0;
+    flex-shrink: 0;
 }
-.group_1 {
+.group {
     background-color: hsla(var(--ig-secondary-800));
     justify-content: flex-start;
     align-items: stretch;
@@ -42,8 +41,9 @@
     padding: 24px;
     min-width: 50px;
     min-height: 50px;
+    flex-shrink: 0;
 }
-.group_2 {
+.group_1 {
     justify-content: flex-start;
     align-items: stretch;
     align-content: flex-start;
@@ -52,11 +52,7 @@
     min-width: 50px;
 }
 .media-content {
-    height: 240px;
-}
-.body-content {
-    min-width: 50px;
-    min-height: 50px;
+    height: 120px;
 }
 .actions-content {
     min-width: 50px;
@@ -68,16 +64,12 @@
 .image {
     height: 100%;
 }
-.text {
-    height: max-content;
-    min-width: min-content;
-}
 .content {
     color: hsla(var(--ig-surface-500));
     height: max-content;
     min-width: min-content;
 }
-.text_1 {
+.text {
     color: hsla(var(--ig-surface-500));
     height: max-content;
     min-width: min-content;
