--- a/Bugs in Samples/Pages/CardsOpacity.razor
+++ b/Bugs in Samples/Pages/CardsOpacity.razor
@@ -1,129 +1,137 @@
 @page "/cards-opacity"
 
 <div class="column-layout cards-opacity-container">
-    <div class="row-layout group">
+    <div class="row-layout cards">
         <IgbCard Outlined="true" class="card" cards-opacity-scope>
+            <IgbCardMedia class="media-content" cards-opacity-scope>
+                <img src="assets/theme-light.svg" class="image" />
+            </IgbCardMedia>
             <IgbCardHeader>
                 <h3 slot="title">
+                    Card Title
                 </h3>
                 <h5 slot="subtitle">
+                    This is the card subtitle
                 </h5>
             </IgbCardHeader>
             <IgbCardContent class="body-content" cards-opacity-scope>
-                <div class="column-layout group_1">
-                    <img src="assets/Logo.svg" class="image" />
-                    <p class="typography__subtitle-1 content">
-                        Products
-                    </p>
-                    <h4 class="content">
-                        1,236
-                    </h4>
-                    <p class="typography__subtitle-2 text">
-                        Increased 75%
-                    </p>
+                <div class="column-layout custom-content">
+                    <img src="assets/theme-light.svg" class="image_1" />
+                    <IgbButton class="button" cards-opacity-scope>
+                        Button
+                        <IgbRipple></IgbRipple>
+                    </IgbButton>
                 </div>
             </IgbCardContent>
             <IgbCardActions class="actions-content" cards-opacity-scope>
-                <IgbButton Variant="ButtonVariant.Outlined" class="button" cards-opacity-scope>
-                    VIEW REPORT
+                <IgbButton Variant="ButtonVariant.Flat" class="button" cards-opacity-scope>
+                    Button
                     <IgbRipple></IgbRipple>
                 </IgbButton>
+                <IgbIconButton Variant="IconButtonVariant.Flat" class="icon-button" cards-opacity-scope>
+                    <span class="material-icons">
+                        favorite
+                    </span>
+                    <IgbRipple></IgbRipple>
+                </IgbIconButton>
+                <IgbIconButton Variant="IconButtonVariant.Flat" class="icon-button" cards-opacity-scope>
+                    <span class="material-icons">
+                        share
+                    </span>
+                    <IgbRipple></IgbRipple>
+                </IgbIconButton>
             </IgbCardActions>
         </IgbCard>
         <IgbCard Outlined="true" class="card" cards-opacity-scope>
+            <IgbCardMedia class="media-content" cards-opacity-scope>
+                <img src="assets/theme-dark.svg" class="image" />
+            </IgbCardMedia>
             <IgbCardHeader>
                 <h3 slot="title">
+                    Card Title
                 </h3>
                 <h5 slot="subtitle">
+                    This is the card subtitle
                 </h5>
             </IgbCardHeader>
             <IgbCardContent class="body-content" cards-opacity-scope>
-                <div class="column-layout group_1">
-                    <img src="assets/Logo.svg" class="image" />
-                    <p class="typography__subtitle-1 content">
-                        Products
-                    </p>
-                    <h4 class="content">
-                        1,236
-                    </h4>
-                    <p class="typography__subtitle-2 text">
-                        Increased 75%
-                    </p>
+                <div class="column-layout custom-content">
+                    <img src="assets/theme-dark.svg" class="image_1" />
+                    <IgbButton class="button" cards-opacity-scope>
+                        Button
+                        <IgbRipple></IgbRipple>
+                    </IgbButton>
                 </div>
             </IgbCardContent>
             <IgbCardActions class="actions-content" cards-opacity-scope>
-                <IgbButton Variant="ButtonVariant.Outlined" class="button" cards-opacity-scope>
-                    VIEW REPORT
+                <IgbButton Variant="ButtonVariant.Flat" class="button" cards-opacity-scope>
+                    Button
                     <IgbRipple></IgbRipple>
                 </IgbButton>
+                <IgbIconButton Variant="IconButtonVariant.Flat" class="icon-button" cards-opacity-scope>
+                    <span class="material-icons">
+                        favorite
+                    </span>
+                    <IgbRipple></IgbRipple>
+                </IgbIconButton>
+                <IgbIconButton Variant="IconButtonVariant.Flat" class="icon-button" cards-opacity-scope>
+                    <span class="material-icons">
+                        share
+                    </span>
+                    <IgbRipple></IgbRipple>
+                </IgbIconButton>
             </IgbCardActions>
         </IgbCard>
         <IgbCard Outlined="true" class="card" cards-opacity-scope>
+            <IgbCardMedia class="media-content" cards-opacity-scope>
+                <img src="assets/design system.png" class="image" />
+            </IgbCardMedia>
             <IgbCardHeader>
                 <h3 slot="title">
+                    Card Title
                 </h3>
                 <h5 slot="subtitle">
+                    This is the card subtitle
                 </h5>
             </IgbCardHeader>
             <IgbCardContent class="body-content" cards-opacity-scope>
-                <div class="column-layout group_1">
-                    <img src="assets/Logo.svg" class="image" />
-                    <p class="typography__subtitle-1 content">
-                        Products
-                    </p>
-                    <h4 class="content">
-                        1,236
-                    </h4>
-                    <p class="typography__subtitle-2 text">
-                        Increased 75%
-                    </p>
+                <div class="column-layout custom-content">
+                    <img src="assets/design system.png" class="image_1" />
+                    <IgbButton class="button" cards-opacity-scope>
+                        Button
+                        <IgbRipple></IgbRipple>
+                    </IgbButton>
                 </div>
             </IgbCardContent>
             <IgbCardActions class="actions-content" cards-opacity-scope>
-                <IgbButton Variant="ButtonVariant.Outlined" class="button" cards-opacity-scope>
-                    VIEW REPORT
+                <IgbButton Variant="ButtonVariant.Flat" class="button" cards-opacity-scope>
+                    Button
                     <IgbRipple></IgbRipple>
                 </IgbButton>
-            </IgbCardActions>
-        </IgbCard>
-        <IgbCard Outlined="true" class="card" cards-opacity-scope>
-            <IgbCardHeader>
-                <h3 slot="title">
-                </h3>
-                <h5 slot="subtitle">
-                </h5>
-            </IgbCardHeader>
-            <IgbCardContent class="body-content" cards-opacity-scope>
-                <div class="column-layout group_1">
-                    <img src="assets/Logo.svg" class="image" />
-                    <p class="typography__subtitle-1 content">
-                        Products
-                    </p>
-                    <h4 class="content">
-                        1,236
-                    </h4>
-                    <p class="typography__subtitle-2 text">
-                        Increased 75%
-                    </p>
-                </div>
-            </IgbCardContent>
-            <IgbCardActions class="actions-content" cards-opacity-scope>
-                <IgbButton Variant="ButtonVariant.Outlined" class="button" cards-opacity-scope>
-                    VIEW REPORT
+                <IgbIconButton Variant="IconButtonVariant.Flat" class="icon-button" cards-opacity-scope>
+                    <span class="material-icons">
+                        favorite
+                    </span>
                     <IgbRipple></IgbRipple>
-                </IgbButton>
+                </IgbIconButton>
+                <IgbIconButton Variant="IconButtonVariant.Flat" class="icon-button" cards-opacity-scope>
+                    <span class="material-icons">
+                        share
+                    </span>
+                    <IgbRipple></IgbRipple>
+                </IgbIconButton>
             </IgbCardActions>
         </IgbCard>
     </div>
-    <div class="column-layout group_2">
-        <h6 class="content_1">
+    <div class="column-layout group">
+        <h6 class="h6">
             Issue REPRODUCED IN: Blazor and Web Components generated apps
         </h6>
-        <div class="row-layout group_3">
-            <p class="typography__subtitle-1 content_1">
-                Cards have an opacity issue. They look disabled.
+        <div class="row-layout group_1">
+            <p class="typography__subtitle-1 text">
+                The content placed inside the CARD SLOT looks like it's disabled. Some CSS class is applying a 0.6 opacity to the content of slots. I dont know if this affects other components with slots. 
             </p>
-            <h6 class="content_1">
+            <h6 class="h6">
                 REPRODUCED IN: Blazor and WebComponents generated apps
             </h6>
         </div>
