--- a/Bugs in Samples/Pages/CardsOpacity.razor.css
+++ b/Bugs in Samples/Pages/CardsOpacity.razor.css
@@ -12,35 +12,35 @@
 .row-layout {
     display: flex;
 }
-.group {
+.cards {
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: stretch;
     align-content: flex-start;
     gap: 16px;
-    overflow: auto;
     position: relative;
     padding: 24px;
     min-width: 50px;
     min-height: 50px;
     flex-grow: 1;
-    flex-basis: 0;
+    flex-shrink: 0;
 }
 .card {
+    width: 240px;
     height: max-content;
     min-width: 240px;
-    flex-grow: 1;
-    flex-basis: 0;
+    flex-shrink: 0;
 }
-.group_1 {
+.custom-content {
     justify-content: flex-start;
-    align-items: center;
+    align-items: stretch;
     align-content: flex-start;
+    gap: 16px;
     position: relative;
     min-width: 50px;
     min-height: 50px;
 }
-.group_2 {
+.group {
     background-color: hsla(var(--ig-secondary-800));
     justify-content: flex-start;
     align-items: stretch;
@@ -51,13 +51,16 @@
     min-width: 50px;
     min-height: 50px;
 }
-.group_3 {
+.group_1 {
     justify-content: flex-start;
     align-items: stretch;
     align-content: flex-start;
     gap: 16px;
     position: relative;
     min-width: 50px;
+}
+.media-content {
+    height: 148px;
 }
 .body-content {
     min-width: 50px;
@@ -67,25 +70,27 @@
     min-width: 50px;
     min-height: 40px;
 }
+.icon-button::part(base) {
+    color: hsla(var(--ig-secondary-500));
+}
 .image {
+    height: 100%;
+}
+.image_1 {
     object-fit: cover;
-    width: 149px;
-    height: 100px;
+    height: 130px;
     min-width: 0;
     min-height: 0;
     flex-shrink: 0;
 }
-.content {
+.h6 {
+    color: hsla(var(--ig-surface-500));
     height: max-content;
     min-width: min-content;
 }
 .text {
-    color: hsla(var(--ig-success-500));
-    height: max-content;
-    min-width: min-content;
-}
-.content_1 {
     color: hsla(var(--ig-surface-500));
+    width: 733px;
     height: max-content;
     min-width: min-content;
 }
