--- a/Bugs in Samples/Pages/Dialog.razor
+++ b/Bugs in Samples/Pages/Dialog.razor
@@ -10,17 +10,17 @@
             DIALOG WITH MIN WIDTH
             <IgbRipple></IgbRipple>
         </IgbButton>
-        <div class="row-layout group_1">
+        <div class="row-layout cards">
             <IgbCard Outlined="true" class="card" dialog-scope>
                 <IgbCardMedia class="media-content" dialog-scope>
                     <img src="assets/theme-light.svg" class="image" />
                 </IgbCardMedia>
                 <IgbCardHeader>
                     <h3 slot="title">
-                        Cards purpose
+                        Card Title
                     </h3>
                     <h5 slot="subtitle">
-                        has issues
+                        This is the card subtitle
                     </h5>
                 </IgbCardHeader>
                 <IgbCardActions class="actions-content" dialog-scope>
@@ -31,12 +31,6 @@
                     <IgbIconButton Variant="IconButtonVariant.Flat">
                         <span class="material-icons">
                             favorite
-                        </span>
-                        <IgbRipple></IgbRipple>
-                    </IgbIconButton>
-                    <IgbIconButton Variant="IconButtonVariant.Flat">
-                        <span class="material-icons">
-                            bookmark
                         </span>
                         <IgbRipple></IgbRipple>
                     </IgbIconButton>
@@ -54,10 +48,10 @@
                 </IgbCardMedia>
                 <IgbCardHeader>
                     <h3 slot="title">
-                        Is to show how
+                        Card Title
                     </h3>
                     <h5 slot="subtitle">
-                        in web components
+                        This is the card subtitle
                     </h5>
                 </IgbCardHeader>
                 <IgbCardActions class="actions-content" dialog-scope>
@@ -68,12 +62,6 @@
                     <IgbIconButton Variant="IconButtonVariant.Flat">
                         <span class="material-icons">
                             favorite
-                        </span>
-                        <IgbRipple></IgbRipple>
-                    </IgbIconButton>
-                    <IgbIconButton Variant="IconButtonVariant.Flat">
-                        <span class="material-icons">
-                            bookmark
                         </span>
                         <IgbRipple></IgbRipple>
                     </IgbIconButton>
@@ -91,10 +79,10 @@
                 </IgbCardMedia>
                 <IgbCardHeader>
                     <h3 slot="title">
-                        The overlay
+                        Card Title
                     </h3>
                     <h5 slot="subtitle">
-                        when the app is generated
+                        This is the card subtitle
                     </h5>
                 </IgbCardHeader>
                 <IgbCardActions class="actions-content" dialog-scope>
@@ -110,12 +98,6 @@
                     </IgbIconButton>
                     <IgbIconButton Variant="IconButtonVariant.Flat">
                         <span class="material-icons">
-                            bookmark
-                        </span>
-                        <IgbRipple></IgbRipple>
-                    </IgbIconButton>
-                    <IgbIconButton Variant="IconButtonVariant.Flat">
-                        <span class="material-icons">
                             share
                         </span>
                         <IgbRipple></IgbRipple>
@@ -126,11 +108,11 @@
     </div>
     <span class="dialog-min-width">Dialog not yet available in Blazor</span>
     <span class="dialog-min-width">Dialog not yet available in Blazor</span>
-    <div class="column-layout group_3">
+    <div class="column-layout group_2">
         <h6 class="content_1">
             ISSUES
         </h6>
-        <div class="row-layout group_4">
+        <div class="row-layout group_3">
             <p class="typography__subtitle-1 content_1">
                 The top-left padding of the dialog doesnt match the bottom-right padding.
             </p>
@@ -138,7 +120,7 @@
                 REPRODUCED IN: AppBuilder Edit &amp; Preview and Angular generated app
             </h6>
         </div>
-        <div class="row-layout group_4">
+        <div class="row-layout group_3">
             <p class="typography__subtitle-1 content_1">
                 The font of the title shown in AppBuilder preview doesnt match the generated font 
             </p>
@@ -146,7 +128,7 @@
                 REPRODUCED IN: Angular and Web Components generated apps
             </h6>
         </div>
-        <div class="row-layout group_4">
+        <div class="row-layout group_3">
             <p class="typography__subtitle-1 content_1">
                 Action buttons dont have spacing between them
             </p>
@@ -154,7 +136,7 @@
                 REPRODUCED IN: AppBuilder Edit &amp; Preview
             </h6>
         </div>
-        <div class="row-layout group_4">
+        <div class="row-layout group_3">
             <p class="typography__subtitle-1 content_1">
                 Dialog is cropped
             </p>
